--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "supertest": "^6.2.2"
   },
   "dependencies": {
+    "cloudinary": "^1.29.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "react": "^18.0.0"
   }
 }
